[workspace]
resolver = "2"
members = [
    "ui-events",
    "ui-events-apple-common",
    "ui-events-appkit",
    "ui-events-uikit",
    "ui-events-web",
    "ui-events-winit",
    "ui-input-state",
    "ui-theme",
    "examples/simple",
    "examples/input_tracker",
    "examples/simple_web",
    "examples/simple_appkit",
]

[workspace.package]
# UI Events version, also used by other packages which want to mimic UI Events' version.
#
# NOTE: When bumping this, remember to also bump the aforementioned other packages'
#       version in the dependencies section at the bottom of this file.
version = "0.3.0"

edition = "2024"
# Keep in sync with RUST_MIN_VER in .github/workflows/ci.yml, with the relevant README.md files
# and with the MSRV in the `Unreleased` section of CHANGELOG.md.
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/endoli/ui-events"

[workspace.lints]
rust.unsafe_code = "deny"

# LINEBENDER LINT SET - Cargo.toml - v6
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[workspace.dependencies]
dpi = { version = "0.1.2", default-features = false }
example-input-tracker = { path = "examples/input_tracker" }
ui-events = { version = "0.3.0", path = "ui-events", default-features = false }
ui-events-apple-common = { version = "0.3.0", path = "ui-events-apple-common", default-features = false }
ui-events-appkit = { version = "0.3.0", path = "ui-events-appkit" }
ui-events-uikit = { version = "0.3.0", path = "ui-events-uikit" }
ui-events-web = { version = "0.3.0", path = "ui-events-web" }
web-time = "1.1.0"
