[package]
name = "simple_appkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ui-events = { workspace = true }
ui-events-appkit = { workspace = true }
example-input-tracker = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.2", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSAutoreleasePool",
    "NSDate",
    "NSValue",
    "NSString",
    "NSGeometry",
] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSApplication",
    "NSResponder",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSGraphics",
    "NSBezierPath",
    "NSColor",
    "NSFont",
    "NSTextField",
    "NSButton",
    "NSRunningApplication",
    "objc2-core-foundation",
    "NSStringDrawing",
] }

[lints]
workspace = true
